--- a/package.json
+++ b/package.json
@@ -1,33 +1,22 @@
 {
-<<<<<<< HEAD
-  "name": "Baeuda",
-  "version": "1.0.0",
-  "description": "Create and edit flashcards offline in a beautiful user interface",
-=======
-  "name": "Sigag",
-  "version": "1.0.0",
-  "description": "Pomodoro Timer",
->>>>>>> 379d5b310af4239cfb983aeb26e8031c6e70b254
+  "name": "baeuda",
+  "version": "0.0.1",
+  "description": "Create and edit flashcards using Baeuda.",
   "main": "main.js",
   "scripts": {
     "start": "electron ."
   },
-  "author": "Edwin Kofler",
-<<<<<<< HEAD
-  "license": "ISC",
-  "dependencies": {
-    "@fortawesome/fontawesome": "^1.1.3",
-    "browserify": "^16.1.0",
-    "electron-packager": "^11.0.1",
-    "sweetalert": "^2.1.0"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/EanKeen/Baeuda.git"
   },
-  "devDependencies": {
-    "electron": "^1.8.2"
-=======
+  "author": "Edwin Kofler",
   "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/EanKeen/Baeuda/issues"
+  },
+  "homepage": "https://github.com/EanKeen/Baeuda#readme",
   "dependencies": {
-    "electron": "^1.8.2",
-    "npm": "^5.7.1"
->>>>>>> 379d5b310af4239cfb983aeb26e8031c6e70b254
+    "electron": "^1.8.3"
   }
 }
