--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/EanKeen/Baeuda#readme",
   "dependencies": {
-    "electron": "^1.8.3"
+    "electron": "^1.8.3",
+    "npm": "^5.8.0"
   }
 }
